@@ -5,9 +5,6 @@ udp
 documentation
 	perhaps the option (or just hint) not to mark very tiny regions as
 	modified, because that is inefficient for the encodings.
-optionally dont draw rich cursors as xcursors
-cursor smears on IRIX with pthreads, then has bus error. has to be a mutex
-	problem in cursor routines.
 
 later:
 ------
@@ -18,6 +15,9 @@ CORBA
 done:
 -----
 
+.optionally dont draw rich cursors as xcursors
+.cursor smears on IRIX with pthreads, then has bus error. has to be a mutex
+	problem in cursor routines.
 .fix bug in http (java) client with big endian server: byte swapping is broken
 	(was a cursorshape which was sent too soon; java vncviewer assumes
 	a rich cursor shape to be always 1 byte per pixel, however, framebuffer
